--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi</p>
+                    <p>My name is Jessica Rocha. I'm a freelance web designer based in Southern California.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>There </p>
