--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,11 @@
                 <div class="col-lg-4">
                     <p>There </p>
                 </div>
-                
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="#" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> View my Resume
+                    </a>
+                </div>
             </div>
         </div>
     </section>
