--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>My name is Jessica Rocha. I'm a freelance web designer based in Southern California. I love creating things.</p>
+                    <p>My name is Jessica Rocha. I'm a web developer based in Southern California. I love creating things. I specialize in </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a business looking for an online presence or  </p>
+                    <p>Whether you're a business looking for an online presence or an employer looking to hire </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
