--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>My name is Jessica Rocha. I'm a web developer based in Southern California. I love creating things. I specialize in </p>
+                    <p>My name is Jessica Rocha. I'm a web developer based in Southern California. I love creating things.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a business looking for an online presence or an employer looking to hire </p>
+                    <p>Whether you're a business needing an online presence, an employer looking to hire, or basically any human person with 
+                     a project, I'd love to hear from you.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
