--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>My name is Jessica Rocha. I'm a web developer based in Southern California. I love creating things.</p>
+                    <p>My name is Jessica Rocha. I'm a web developer based in Southern California. I have a passion for creating 
+                     things. I specialize in website customization. </p>
                 </div>
                 <div class="col-lg-4">
                     <p>Whether you're a business needing an online presence, an employer looking to hire, or basically any human person with 
