--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,5 +3,5 @@
 @import "{{ site.theme }}";
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
-    color: blueviolet;
+    color: #FB6648;
 }
