--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><i class="fa fa-star" aria-hidden="true"></i></a>
+                <a class="navbar-brand" href="#page-top">
+                   <i class="fa fa-star" aria-hidden="true"></i>
+               </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
