--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,6 @@
 ---
 @import "{{ site.theme }}";
 
-#portfolio .portfolio-item .portfolio-link .caption:hover {
-    color: #FB6648;
+.navbar a:hover {
+    color: #0094ff
 }
