--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,7 +18,7 @@
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
+                                    <strong>{{ post.project-date }}
                                     </strong>
                                 </li>
                             </ul>
