--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -22,7 +22,7 @@
                                     </strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Go to Site</button>
+                            <button type="button" class="btn btn-default"><i class="fa fa-times"></i> Go to Site</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
