--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -219,6 +219,7 @@ section.success {
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
     opacity: 1;
+    color: fuchsia
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
