--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -206,12 +206,16 @@ section.success {
     max-width: 400px;
 }
 
+#portfolio .portfolio-item .portfolio-link {
+    background: #fff
+}
+
 #portfolio .portfolio-item .portfolio-link .caption {
     position: absolute;
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: #({{ site.color.primary}},.9);
+    background: rgba({{ site.color.primary-rgb }},.9);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
