portfolio link hover styling

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -206,7 +206,7 @@ section.success {
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#portfolio .portfolio-item .portfolio-link a:hover {
     background: #fff
 }
 
